# multi-agent-coder

./: .gitignore  .issues.json  LICENSE  README.md  USER_CLEANUP_GUIDE.md  async_coder_example.py  check_agents_work.py  cleanup.sh  pyproject.toml  requirements.txt  run.py  test_collaboration.py  test_fixed_implementation.py
.cursor/rules/: development-guidelines.mdc  user-specification.mdc  version-control.mdc
.memory/: coder_0_memory.json  coder_1_memory.json  coder_2_memory.json
src/multi_agent_coder/: __init__.py  agents.py  collaboration.py  config.py  git_utils.py  llm_utils.py  main.py  multi_repo_manager.py  storage.py
src/multi_agent_coder/agents/: __init__.py  coder.py  commenter.py  memory_manager.py
src/multi_agent_coder/agents/thinking/: __init__.py  memory_manager.py  planner.py  reference_project_analyzer.py  requirement_analyzer.py  self_reviewer.py  tool_executor.py
tests/: test_storage.py
