[project]
name = "multi-agent-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioconsole>=0.8.1",
    "aiofiles>=24.1.0",
    "coloredlogs>=15.0.1",
    "gitpython>=3.1.44",
    "openai>=1.82.0",
    "pydantic>=2.11.5",
    "pygame>=2.6.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
